--- a/Plotting_with_R_ggplot2.html
+++ b/Plotting_with_R_ggplot2.html
@@ -174,7 +174,7 @@ g + labs(list(x = &quot;Length of Petal&quot;, y = &quot;Length of Width&quot;,
 
 </article></slide><slide class=''><hgroup><h2>Save the plot</h2></hgroup><article  id="save-the-plot">
 
-<pre class = 'prettyprint lang-r'>ggsave(&quot;my_first_plot.png&quot;, plot = g, dpi = 900)
+<pre class = 'prettyprint lang-r'>ggsave(&quot;my_first_plot.png&quot;, width = 7, height = 7, dpi = 900)
 # The file will be saved in your working directory unless specified
 # &#39;plot = last_plot()&#39; by default</pre>
 
