--- a/Plotting_with_R_ggplot2.html
+++ b/Plotting_with_R_ggplot2.html
@@ -143,7 +143,7 @@
 
 </article></slide><slide class=''><hgroup><h2>Preparation</h2></hgroup><article  id="preparation">
 
-<pre class = 'prettyprint lang-r'>install.packages(&quot;ggplot2&quot;, repos = &quot;http://cran.csie.ntu.edu.tw/&quot;)
+<pre class = 'prettyprint lang-r'>install.packages(&quot;ggplot2&quot;, repos = &quot;https://cloud.r-project.org&quot;)
 # &quot;repos&quot; argument is optional</pre>
 
 <pre class = 'prettyprint lang-r'>library(ggplot2)</pre>
