--- a/Plotting_with_R_ggplot2.html
+++ b/Plotting_with_R_ggplot2.html
@@ -141,7 +141,19 @@
 <li>Geometric (e.g. points, lines, bars)</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>Preparation</h2></hgroup><article  id="preparation">
+</article></slide><slide class=''><hgroup><h2>Check R and ggplot2 versions</h2></hgroup><article  id="check-r-and-ggplot2-versions">
+
+<pre class = 'prettyprint lang-r'>version
+# &quot;version.string&quot; &gt;= 3.3.0
+packageVersion(&quot;ggplot2&quot;)
+# &gt;= 2.2.0</pre>
+
+<ul>
+<li>If your R version &lt; 3.3.0, you may update your R on <a href='https://cloud.r-project.org' title=''>https://cloud.r-project.org</a>.</li>
+<li>If your ggplot2 version &lt; 2.2.0 or doesn&#39;t exist, please update your ggplot2 with the instruction in the next slide.</li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Install ggplot2 if needed &amp; Load ggplot2</h2></hgroup><article  id="install-ggplot2-if-needed-load-ggplot2">
 
 <pre class = 'prettyprint lang-r'>install.packages(&quot;ggplot2&quot;, repos = &quot;https://cloud.r-project.org&quot;)
 # &quot;repos&quot; argument is optional</pre>
