--- a/Plotting_with_R_ggplot2.html
+++ b/Plotting_with_R_ggplot2.html
@@ -151,7 +151,7 @@ packageVersion(&quot;ggplot2&quot;)
 
 <ul>
 <li>If your R version &lt; 3.3.0, you may update your R on <a href='https://cloud.r-project.org' title=''>https://cloud.r-project.org</a>.</li>
-<li>If your ggplot2 version &lt; 2.2.0 or doesn&#39;t exist, please update your ggplot2 with the instruction in the next slide.</li>
+<li>If your ggplot2 version &lt; 2.2.0 or doesn&#39;t exist, please update or install your ggplot2 with the instruction in the next slide.</li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>Install ggplot2 if needed &amp; Load ggplot2</h2></hgroup><article  id="install-ggplot2-if-needed-load-ggplot2">
